# break-your-agent

./: .gitignore  README.md  pyproject.toml
break_your_agent/: __init__.py  __main__.py  _text.py  agent.py  model.py  policy.py  scorecard.py  tools.py
break_your_agent/attacks/: __init__.py  a01_direct_injection.py  a02_indirect_injection.py  a03_tool_result_poisoning.py  a04_confused_deputy.py  a05_data_exfiltration.py  a06_unicode_smuggling.py  a07_goal_hijack_exfil.py  a08_refusal_suppression.py  a09_authority_spoof.py  a10_multihop_indirect.py  a11_persistence_bestofn.py  base.py
tests/: test_attacks.py  test_defense_necessity.py  test_toolcall_rescue.py  test_units.py
