[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "break-your-agent"
version = "0.1.0"
description = "A hands-on lab: a deliberately-vulnerable tool-calling agent, a graded ladder of attacks, and the defenses that stop them."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "insomniac-asif" }]
keywords = [
    "llm",
    "agent",
    "security",
    "prompt-injection",
    "tool-calling",
    "ai-safety",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
break-your-agent = "break_your_agent.scorecard:main"

[project.urls]
Homepage = "https://github.com/insomniac-asif/break-your-agent"
Repository = "https://github.com/insomniac-asif/break-your-agent"

[tool.hatch.build.targets.wheel]
packages = ["break_your_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
